# risk-performance-analytics-engine

./: LICENSE  README.md  pyproject.toml
data/: loaders.py
data/sample/: sample_returns.csv
docs/: architecture.md
scripts/: run_pipeline.py
src/analytics_engine/: config.py
src/performance/: returns.py
src/risk_analytics/analytics/performance/: cagr.py  returns.py  sharpe.py  sortino.py
src/risk_analytics/data/: loaders.py  schemas.py  transforms.py  validators.py
src/utils/: validation.py
tests/: test_returns.py
tests/unit/: test_cagr.py  test_returns.py  test_sharpe.py
