[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-performance-analytics-engine"
version = "0.1.0"
description = "Institutional-grade risk and performance analytics engine for evaluating trading strategies and portfolio behavior."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Adrian Sterling Blackwell" }
]
keywords = [
    "quant",
    "risk-analytics",
    "performance-analytics",
    "portfolio-analytics",
    "finance",
    "python",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
viz = [
    "plotly>=5.24.0",
    "streamlit>=1.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"